Ensure logo shows correctly on log in page in Windows high contrast
- Added a class to the logo image and also added forced mode to the logo image class
- Fixes #9428

--- a/client/scss/layouts/_login.scss
+++ b/client/scss/layouts/_login.scss
@@ -126,4 +126,10 @@
     margin: theme('spacing.8') auto 0;
     width: theme('spacing.8');
   }
+
+  @media (forced-colors: $media-forced-colours) and (prefers-color-scheme: dark) {
+    .login-logo-img {
+      filter: invert(100%);
+    }
+  }
 }
